--- a/style.css
+++ b/style.css
@@ -1,4 +1,62 @@
+* {
+  box-sizing: border-box;
+}
+
+.wrapper {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+}
+
+.previous-album-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 20%;
+  margin-left: 3rem;
+}
+
+.previous-content-title {
+  font-size: 2rem;
+  margin-bottom: 1rem;
+}
+
+.previous-content-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 1rem;
+  border: 1px solid #a1a1a1;
+  border-radius: 0.5rem;
+}
+
+.previous-title-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-bottom: 20px;
+  text-align: center;
+}
+
+#previous-title {
+  font-size: 1.5rem;
+}
+
+#previous-artist {
+  font-size: 1rem;
+}
+
+.previous-art-container {
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 150px;
+  width: 150px;
+}
+
 .today-album-container {
+  width: 60%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -9,7 +67,9 @@
   flex-direction: column;
   align-items: center;
   padding-bottom: 20px;
+  text-align: center;
 }
+
 #today-title {
   font-size: 4rem;
 }
@@ -36,7 +96,7 @@
   flex-direction: column;
   align-items: center;
   margin: 4px;
-  border: 1px solid #eaeaea;
+  border: 1px solid #a1a1a1;
   border-radius: 20px 20px;
 }
 
@@ -47,4 +107,27 @@
 
 .qrcode {
   padding-bottom: 1rem;
+}
+
+.wiki-container {
+  margin: 5rem 0;
+  display: flex;
+  flex-direction: column;
+  width: 20%;
+  margin-right: 3rem;
+  padding: 1rem;
+  border: 2px solid #a1a1a1;
+  border-radius: 0.5rem;
+}
+
+.wiki-title {
+  font-size: 2rem;
+  text-align: center;
+  margin-bottom: 1rem;
+  border-bottom: 1px solid #a1a1a1;
+}
+
+#wiki-data {
+  font-size: 1.2rem;
+  overflow: scroll;
 }
