--- a/style.css
+++ b/style.css
@@ -88,6 +88,7 @@
   align-items: center;
   padding-bottom: 2rem;
   text-align: center;
+  margin-top: auto;
 }
 
 #today-title {
@@ -108,6 +109,7 @@
 
 .codes-container {
   display: flex;
+  margin-top: auto;
 }
 
 .code-item {
