--- a/style.css
+++ b/style.css
@@ -190,7 +190,7 @@
 #progress-bar-filled {
   height: 100%;
   width: 0%; /* Initial width, will be set by JS */
-  background-color: #ed8a19; /* Fallback, actual gradient set by JS */
+  background-color: #119309; /* Fallback, actual gradient set by JS */
   transition: width 0.5s ease-in-out, background-color 0.5s ease-in-out;
 }
 
