--- a/style.css
+++ b/style.css
@@ -13,7 +13,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  /* justify-content: center; */
   width: 20%;
   margin-left: 3rem;
 }
@@ -41,7 +40,6 @@
   padding: 1rem;
   border: 1px solid #a1a1a1;
   border-radius: 0.5rem;
-  /* flex-grow: 0; */
 }
 
 .previous-title-container {
@@ -182,17 +180,16 @@
   align-items: center;
   justify-content: center;
   width: 100%;
-  /* margin-top: 1rem; */
   flex-grow: 1;
 }
 
 .progress-title {
-  font-size: 1.2rem;
-  margin-bottom: 0.5rem;
+  font-size: 2rem;
+  margin-bottom: 1rem;
 }
 
 .progress-bar-container {
-  width: 150px; /* Match previous-art-container width */
+  width: 100%;
   height: 20px;
   background-color: #e0e0e0;
   border: 1px solid #c0c0c0;
@@ -208,7 +205,7 @@
 }
 
 #progress-text {
-  font-size: 0.9rem;
+  font-size: 1.5rem;
   margin-top: 0.5rem;
 }
 
